--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "browserstacktunnel-wrapper": "^1.3.0",
+    "async": "^0.9.0",
     "bluebird": "^2.1.3",
-    "async": "^0.9.0"
+    "browserstack-webdriver": "^2.41.1",
+    "browserstacktunnel-wrapper": "^1.3.0"
   }
 }
