--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "async": "^0.9.0",
     "bluebird": "^2.1.3",
     "browserstack-webdriver": "^2.41.1",
-    "browserstacktunnel-wrapper": "^1.3.0"
+    "browserstacktunnel-wrapper": "^1.3.0",
+    "slug": "^0.5.0"
   }
 }
